--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "message": "echo Server is ready",
+    "cy": "start-server-and-test start http://localhost:4200 message"
   },
   "private": true,
   "dependencies": {
@@ -41,6 +43,7 @@
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.1.2",
+    "start-server-and-test": "1.1.0",
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
     "typescript": "~2.5.3"
